--- a/app/views/packages/_package.html.erb
+++ b/app/views/packages/_package.html.erb
@@ -1,7 +1,30 @@
-<p><%= package.tracking_number %></p>
-<%= link_to "Delete", courier_package_path(@courier, package.id), method: :delete, data: { confirm: "Are you sure?" } %>
+<!--<p><%#= package.tracking_number %></p>-->
+<%#= link_to "Delete", courier_package_path(@courier, package.id), method: :delete, data: { confirm: "Are you sure?" } %>
 <%#= link_to "Mark as Complete", complete_courier_package_path(@courier, package.id), method: :patch %>
 <%#= link_to "Edit", complete_courier_package_path(@courier, package.id), method: :patch %>
+<div class="row clearfix">
+  <% if package.completed? %>
+    <div class="complete">
+      <%= link_to "Mark as Complete", complete_courier_package_path(@courier, package.id), method: :patch %>
+    </div>
+    <div class="package">
+      <p style="opacity: 0.4;"><span style="text-decoration: line-through;"><%= package.tracking_number %></span></p>
+    </div>
+    <div class="trash">
+      <%= link_to "Delete", courier_package_path(@courier, package.id), method: :delete, data: { confirm: "Are you sure?" } %>
+    </div>
+  <% else %>
+    <div class="complete">
+      <%= link_to "Mark as Complete", complete_courier_package_path(@courier, package.id), method: :patch %>
+    </div>
+    <div class="package">
+      <p><%= package.tracking_number %></p>
+    </div>
+    <div class="trash">
+      <%= link_to "Delete", courier_package_path(@courier, package.id), method: :delete, data: { confirm: "Are you sure?" } %>
+    </div>
+  <% end %>
+</div>
 <!--<div class="row clearfix">-->
   <%# if package.completed? %>
 <!--    <div class="complete">-->
