--- a/app/views/couriers/edit.html.erb
+++ b/app/views/couriers/edit.html.erb
@@ -1,7 +1,7 @@
 <h1 class="courier_name">Editing Courier</h1>
 
 <div class="forms">
-  <%= render 'form', todo_list: @courier %>
+  <%= render 'form', courier: @courier %>
 </div>
 
 <div class="links">
