--- a/app/views/couriers/index.html.erb
+++ b/app/views/couriers/index.html.erb
@@ -3,7 +3,8 @@
     <h2 class="courier_name"><%= link_to courier.name, courier %></h2>
     <p class="courier_email"><%= courier.email %></p>
   </div>
-<% end %><div class="links">
+<% end %>
+<div class="links">
   <%= link_to "New Courier", new_courier_path %>
 </div>
 <p id="notice"><%= notice %></p>
