--- a/app/views/couriers/new.html.erb
+++ b/app/views/couriers/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="todo_list_title">New Courier</h1>
+<h1 class="courier_name">New Courier</h1>
 
 <div class="forms">
   <%= render 'form', todo_list: @courier %>
