--- a/app/views/couriers/_form.html.erb
+++ b/app/views/couriers/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: courier, local: true) do |form| %>
-  <% if courier.errors.any? %>
+<%= form_with(model: @courier, local: true) do |form| %>
+  <% if @courier.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(courier.errors.count, "error") %> prohibited this courier from being saved:</h2>
+      <h2><%= pluralize(@courier.errors.count, "error") %> prohibited this courier from being saved:</h2>
 
       <ul>
-      <% courier.errors.full_messages.each do |message| %>
+      <% @courier.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
