--- a/app/views/couriers/show.html.erb
+++ b/app/views/couriers/show.html.erb
@@ -8,7 +8,7 @@
   <div id="form">
     <%= render "packages/form" %>
   </div>
-  <p id="notice"><%= notice %></p>
+  <div id="notice" style="text-align: center;"><%= notice %></div>
 </div>
 
 <div class="links">
