Full scope is already finished, sade couriers deletion is created, also all notices are finallized

--- a/app/views/couriers/index.html.erb
+++ b/app/views/couriers/index.html.erb
@@ -7,4 +7,4 @@
 <div class="links">
   <%= link_to "New Courier", new_courier_path %>
 </div>
-<p id="notice"><%= notice %></p>
+<div id="notice" style="text-align: center;"><%= notice %></div>
