--- a/app/views/couriers/_form.html.erb
+++ b/app/views/couriers/_form.html.erb
@@ -20,8 +20,5 @@
     <%= form.label :email %>
     <%= form.text_field :email %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <div class="actions" style="text-align: center;"><%= form.submit %></div>
 <% end %>
