--- a/app/views/couriers/_form.html.erb
+++ b/app/views/couriers/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
   </div>
 
   <div class="field">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, required: true %>
   </div>
   <div class="actions" style="text-align: center;"><%= form.submit %></div>
 <% end %>
